# ssbh_wgpu

./: .gitignore  Cargo.toml  README.md
nutexb_wgpu/: Cargo.toml  build.rs
nutexb_wgpu/fuzz/: Cargo.toml
nutexb_wgpu/fuzz/fuzz_targets/: create_texture.rs
nutexb_wgpu/src/: lib.rs  main.rs  shader.rs  shader.wgsl
nutexb_wgpu_viewer/: Cargo.toml
nutexb_wgpu_viewer/src/: main.rs
ssbh_wgpu/: Cargo.toml  build.rs
ssbh_wgpu/benches/: animate_skel.rs
ssbh_wgpu/fuzz/: Cargo.toml
ssbh_wgpu/fuzz/fuzz_targets/: render_model_folder.rs
ssbh_wgpu/src/: animation.rs  bone_name.rs  bone_rendering.rs  camera.rs  floor_grid.rs  lib.rs  lighting.rs  main.rs  model.rs  pipeline.rs  render_settings.rs  renderer.rs  rendermesh.rs  sampler.rs  shader.rs  shader_database.rs  shaders.json  shape.rs  swing.rs  swing_rendering.rs  texture.rs  uniforms.rs  vertex.rs  viewport.rs
ssbh_wgpu/src/animation/: camera.rs  constraints.rs  lighting.rs
ssbh_wgpu/src/model/: mesh_creation.rs  pipeline.rs
ssbh_wgpu/src/rendermesh/: mesh_creation.rs
ssbh_wgpu/src/resources/: shaders.json
ssbh_wgpu/src/shader/: bloom.rs  bloom.wgsl  bloom_blur.rs  bloom_blur.wgsl  bloom_combine.rs  bloom_combine.wgsl  bloom_threshold.rs  bloom_threshold.wgsl  bloom_upscale.rs  bloom_upscale.wgsl  floor_grid.rs  floor_grid.wgsl  model.rs  model.wgsl  model_depth.rs  model_depth.wgsl  outline.rs  outline.wgsl  overlay.rs  overlay.wgsl  post_process.rs  post_process.wgsl  renormal.rs  renormal.wgsl  skeleton.rs  skeleton.wgsl  skinning.rs  skinning.wgsl  swing.rs  swing.wgsl  variance_shadow.rs  variance_shadow.wgsl
ssbh_wgpu_test/: Cargo.toml
ssbh_wgpu_test/src/: main.rs
ssbh_wgpu_viewer/: Cargo.toml
ssbh_wgpu_viewer/src/: main.rs
