[workspace]
# wgpu requires the newer resolver
resolver = "2"
members = ["ssbh_wgpu", "ssbh_wgpu_viewer", "ssbh_wgpu_test", "nutexb_wgpu", "nutexb_wgpu_viewer"]

[workspace.dependencies]
ssbh_data = "0.19.0"
wgpu = "29.0.1"
glam = "0.28.0"
rayon = "1.8.1"
simple_logger = "5.2.0"
wgsl_to_wgpu = "0.18.0"
winit = "0.30.13"
anyhow = "1.0"
