[package]
name = "nutexb_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.15.0"
nutexb = "0.6.0"
log = "0.4.17"
bytemuck = { version = "1.7", features = [ "derive" ] }
thiserror = "1.0"
memoffset = "0.8.0"

[build-dependencies]
wgsl_to_wgpu = { git = "https://github.com/ScanMountGoat/wgsl_to_wgpu" }
