[package]
name = "nutexb_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu.workspace = true
nutexb = { git = "https://github.com/jam1garner/nutexb", rev = "7db7c08" }
log = "0.4.17"
bytemuck = { version = "1.7", features = [ "derive" ] }
thiserror = "1.0"

[build-dependencies]
wgsl_to_wgpu.workspace = true
