[package]
name = "ssbh_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.22.0", features = ["bytemuck"] }
wgpu = "0.16.0"
bytemuck = { version = "1.13", features = [ "derive" ] }
ssbh_data = { version = "0.17.0", features = ["strum"] }
xmb_lib = { git = "https://github.com/ultimate-research/xmb_lib", rev = "c71253d" }
walkdir = "2"
rayon = "1.5.1"
nutexb_wgpu = { path = "../nutexb_wgpu" }
serde_json = "1.0"
strum = { version = "0.24.1", features = ["derive"] }
wgpu_text = "0.8.0"
log = "0.4.17"
glyph_brush = "0.7.7" # TODO: avoid this dependency?
arbitrary = { version = "1", optional = true, features = ["derive"] }
image = "0.24.2"
prc-rs = "1.6.1"
topological-sort = "0.2.2"
encase = { version = "0.4.1", features = ["glam"] }
memoffset = "0.8.0"
indexmap = "1.9.2"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.3.5"

[build-dependencies]
wgsl_to_wgpu = "0.4.1"

[features]
arbitrary = ["dep:arbitrary", "ssbh_data/arbitrary", "xmb_lib/arbitrary"]

[[bench]]
name = "animate_skel"
harness = false