[package]
name = "ssbh_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.25.0", features = ["bytemuck"] }
wgpu = "0.20.1"
bytemuck = { version = "1.13", features = [ "derive" ] }
ssbh_data = { version = "0.18.0", features = ["strum"] }
xmb_lib = { git = "https://github.com/ultimate-research/xmb_lib", rev = "faea683" }
walkdir = "2"
nutexb_wgpu = { path = "../nutexb_wgpu" }
serde_json = "1.0"
strum = { version = "0.24.1", features = ["derive"] }
log = "0.4.17"
arbitrary = { version = "1", optional = true, features = ["derive"] }
image = "0.25.1"
prc-rs = "1.6.1"
topological-sort = "0.2.2"
encase = { version = "0.7.0", features = ["glam"] }
indexmap = "1.9.2"
glyphon = { git = "https://github.com/grovesNL/glyphon", rev = "2a45708" }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.3.5"

[build-dependencies]
wgsl_to_wgpu = "0.8.1"

[features]
arbitrary = ["dep:arbitrary", "ssbh_data/arbitrary", "xmb_lib/arbitrary"]

[[bench]]
name = "animate_skel"
harness = false