[package]
name = "ssbh_wgpu_test"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
wgpu = "0.14.0"
nutexb = "0.6.0"
ssbh_wgpu = { path = "../ssbh_wgpu" }
log = "0.4.17"
simple_logger = "2.1.0"
globwalk = "0.8.0"
image = "0.24.2"
futures-intrusive = "0.4.0"
glam = { version = "0.21.3" }
ssbh_data = { git = "https://github.com/ultimate-research/ssbh_lib" }
