[package]
name = "ssbh_wgpu_test"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
wgpu = "0.20.1"
ssbh_wgpu = { path = "../ssbh_wgpu" }
log = "0.4.17"
simple_logger = "2.1.0"
globwalk = "0.8.0"
image = "0.25.1"
futures-intrusive = "0.4.0"
glam = "0.28.0"
ssbh_data = { git = "https://github.com/ultimate-research/ssbh_lib", rev = "acda3a2" }
