[package]
name = "ssbh_wgpu_test"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
wgpu.workspace = true
ssbh_wgpu = { path = "../ssbh_wgpu" }
log = "0.4.17"
simple_logger = "2.1.0"
globwalk = "0.8.0"
image = "0.25.1"
futures-intrusive = "0.4.0"
glam.workspace = true
ssbh_data.workspace = true
