[package]
name = "ssbh_wgpu_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
wgpu.workspace = true
futures = "0.3"
log = "0.4.17"
simple_logger = "2.1.0"
glam = { workspace = true, features = ["bytemuck"] }
ssbh_wgpu = { path = "../ssbh_wgpu" }
ssbh_data = { workspace = true, features = ["strum"] }
pico-args = "0.5.0"