[package]
name = "ssbh_wgpu_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
winit.workspace = true
wgpu.workspace = true
futures = "0.3"
log = "0.4.17"
simple_logger.workspace = true
glam = { workspace = true, features = ["bytemuck"] }
ssbh_wgpu = { path = "../ssbh_wgpu" }
ssbh_data = { workspace = true, features = ["strum"] }
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true
